# k8s-pods-ttl

./: Dockerfile  Makefile  README.md  main.py  pod_ttl.py  pyproject.toml
.github/workflows/: dockerhub.yaml
manifests/: deployment.yaml  rbac.yaml
tests/: conftest.py  kubernetes_client_mock.py  test_pod_ttl.py  test_timer.py
