[tool.poetry]
name = "k8s-pods-ttl"
version = "0.0.1"
description = ""
authors = ["Renato Farias <renatocdfs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kopf = "==1.36.0"
kubernetes = "==26.1.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
pytest = "^6.2.5"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
